Minor Mutiny fixes